# Encrypted-Machine-Learning-Benchmark-Framework

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  rebuild_all.sh
.github/workflows/: ci.yml
cpp_wrapper/: CMakeLists.txt
cpp_wrapper/include/: openfhe_wrapper.h  seal_wrapper.h
cpp_wrapper/src/: openfhe_wrapper.cpp  seal_wrapper.cpp
docs/: grpc-api.md
examples/: basic_encryption.rs  benchmark.rs  medical_data.rs
examples/java-client/: pom.xml
examples/java-client/src/main/java/com/example/hegrpc/analytics/: RegionalAnalytics.java
examples/java-client/src/main/java/com/example/hegrpc/menu/: MenuSystem.java
examples/java-client/src/main/java/com/example/hegrpc/persistence/: DataPersistence.java
examples/java-client/src/main/java/com/example/hegrpc/security/: SecurityDemo.java
examples/java-client/src/main/java/com/example/hegrpc/service/: HEClientService.java
examples/java-client/src/main/resources/: application.properties
grpc_client/src/: main.rs
grpc_server/: Cargo.toml
grpc_server/src/: main.rs
helib_wrapper/src/: helib_wrapper.cpp
openfhe_cpp_wrapper/: CMakeLists.txt
openfhe_cpp_wrapper/src/: openfhe_wrapper.cpp
spring-boot-api/: pom.xml
spring-boot-api/src/main/java/com/fyp/hebench/: HeBenchApplication.java
spring-boot-api/src/main/java/com/fyp/hebench/model/: BenchmarkRequest.java  BenchmarkResponse.java  ComparisonResponse.java  LibraryResult.java
spring-boot-api/src/main/proto/: he_service.proto
spring-boot-api/src/main/resources/: application.properties
src/: bindings.rs  helib.rs  helib_bindings.rs  lib.rs  openFHE_lib.rs
